# Better-Grading-System-Than-Your-Teacher

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py  models.py
src/extractors/: __init__.py  base.py  docx_extractor.py  excel_extractor.py  factory.py  pdf_extractor.py  text_extractor.py
src/grading/: __init__.py  engine.py  llm_client.py  prompt_builder.py  scorer.py
src/rubric/: __init__.py  parser.py  validator.py
tests/: conftest.py  test_extractors.py  test_grading.py  test_integration.py  test_rubric.py
tests/fixtures/: sample_answer.md  sample_rubric.txt
